--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@babel/preset-react": "^7.12.13",
     "eslint": "^7.26.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.22.0",
     "parcel": "^1.12.3",
     "prettier": "^2.3.0"
   },
@@ -31,7 +34,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
-  "browserslist" : [
-    "last 2 Firefox versions"
+  "browserslist": [
+    "last 2 Chrome versions"
   ]
 }
